tests/integration/snapshots/integration__conformance__n_number_real_garbage_after_e.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[1ea]
stderr ---
error: expected +/- or digit after exponent indicator, found `a`
 --> stdin:1:4
  |
1 | [1ea]
  |  --^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
